Created the HTML structure

--- a/index.html
+++ b/index.html
@@ -14,51 +14,88 @@
 
 </head>
 <body>
+  <div class="container">
+    <header>
+      <img src="images/logo.svg">
+      <button class="btn btn--light btn--small">Try It Free</button>
+    </header>
 
-  Try It Free
+    <main class="banner">
+      <div>
+        <img src="images/illustration-mockups.svg">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion. </p>
+ 
+      <button class="btn btn-purple btn--large">Get Started For Free</button>
+      </div>
+    </main>
 
-  Build The Community Your Fans Will Love
+    <section>
+        <img src="images/illustration-your-users.svg" alt="">
+      <div>
+        <h2>Flowing Conversations</h2>
+        <p>  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+        just-in-time loading for a more natural flow.</p>
+      </div>
+      <div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+        <h2>Grow Together</h2>
+        <p> Generate meaningful discussions with your audience and build a strong, loyal community. Think of 
+        the insightful conversations you miss out on with a feedback form. 
+        </p>
+      </div>
+      <div>
+        <h2>Your Users</h2>
+        <p>  It takes no time at all to integrate Huddle with your app's authentication solution. This means, once 
+        signed in to your app, your users can start chatting immediately.
+        </p>
+      </div>
+    </section>
 
-  Get Started For Free
+    <section>
+          <h1>Try It Free</h1>
+          <p>Fully featured 30-day free trial - no credit card required</p>
+          <button class="btn btn--purple btn--large">Get Started For Free</button>
+    </section>
 
-  Flowing Conversations
+    <footer>
+      <div class="logo-area">
+        <img src="logo.svg">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twiiter-square"></i>
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
+        <p class="copyright">&copy; Copyright 2019 Huddle. All rights reserved.</p>
+        
+      </div>
+      <div>
+        <ul>
+          <li>About Us</li>
+          <li>What We Do</li>
+          <li>FAQ</li>
+        </ul>
+         <ul>
+          <li>Career</li>
+          <li>Blog</li>
+          <li>COntact Us</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Subscribe</h2>
+        <p>To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+        send you spam or pass on your email address
+        </p>
+        <button class="btn btn--purple btn--small">Subscribe</button>
+      </div>
+    </footer>
+ 
+  </div>
 
-  Grow Together
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. Think of 
-  the insightful conversations you miss out on with a feedback form. 
+  
 
-  Your Users
 
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, once 
-  signed in to your app, your users can start chatting immediately.
-
-  Try It Free
-
-  Fully featured 30-day free trial - no credit card required
-
-  Get Started For Free
-
-  &copy; Copyright 2019 Huddle. All rights reserved.
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  Subscribe
-
-  To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
 
   Subscribe
 
