styled the background

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <img class="logo" src="images/logo.svg">
       <button class="btn btn--light btn--small">Try It Free</button>
     </header>
+    <div class="block block--gradient"></div>
+    <div class="block block--light"></div>
+
 
     <main class="banner">
       <img class="mockup mockup-main" src="images/illustration-mockups.svg">
